オプション追加 もっさりと動くオプションのクラスを作成

--- a/STG/STG.csproj
+++ b/STG/STG.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Enemy\Enemy.cs" />
     <Compile Include="GameOverScene.cs" />
     <Compile Include="GameScine.cs" />
+    <Compile Include="Option.cs" />
     <Compile Include="PenetrateBullet.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Etc\Program.cs" />
