--- a/STG/STG.csproj
+++ b/STG/STG.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Etc\Rand.cs" />
     <Compile Include="Enemy\RushingEnemy.cs" />
-    <Compile Include="Singleton.cs" />
+    <Compile Include="Etc\Singleton.cs" />
     <Compile Include="TitleScene.cs" />
   </ItemGroup>
   <ItemGroup>
