--- a/STG/STG.csproj
+++ b/STG/STG.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Background.cs" />
     <Compile Include="Bomb.cs" />
     <Compile Include="ChangeableBullet.cs" />
+    <Compile Include="Enemy\ItemEnemy.cs" />
+    <Compile Include="Item2.cs" />
     <Compile Include="ItemController.cs" />
     <Compile Include="ItemGetEffect\ItemGetEffect_PenetrateShot.cs" />
     <Compile Include="ItemGetEffect\ItemGetEffect_PenetrateTriShot.cs" />
@@ -62,9 +64,8 @@
     <Compile Include="ItemGetEffect\ItemGetEffect_Barrier.cs" />
     <Compile Include="ItemGetEffect\ItemGetEffect.cs" />
     <Compile Include="Bullet.cs" />
-    <Compile Include="Enemy\RushingEnemy2.cs" />
     <Compile Include="Enemy\RushingEnemy3.cs" />
-    <Compile Include="Enemy\RushingEnemy4.cs" />
+    <Compile Include="Enemy\RushingEnemy.cs" />
     <Compile Include="ItemListMenu.cs" />
     <Compile Include="ItemSelectFrame.cs" />
     <Compile Include="Item\Item.cs" />
@@ -89,7 +90,6 @@
     <Compile Include="Etc\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Etc\Rand.cs" />
-    <Compile Include="Enemy\RushingEnemy.cs" />
     <Compile Include="Etc\Singleton.cs" />
     <Compile Include="SplitBullet.cs" />
     <Compile Include="TitleScene.cs" />
