--- a/STG/STG.csproj
+++ b/STG/STG.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Bomb.cs" />
     <Compile Include="ChangeableBullet.cs" />
     <Compile Include="Enemy\ItemEnemy.cs" />
-    <Compile Include="Item2.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="ItemController.cs" />
     <Compile Include="ItemGetEffect\ItemGetEffect_PenetrateShot.cs" />
     <Compile Include="ItemGetEffect\ItemGetEffect_PenetrateTriShot.cs" />
@@ -68,15 +68,6 @@
     <Compile Include="Enemy\RushingEnemy.cs" />
     <Compile Include="ItemListMenu.cs" />
     <Compile Include="ItemSelectFrame.cs" />
-    <Compile Include="Item\Item.cs" />
-    <Compile Include="Item\BarrierItem.cs" />
-    <Compile Include="Item\SpeedThreeShotItem.cs" />
-    <Compile Include="Item\PenetrateTriShotItem.cs" />
-    <Compile Include="Item\TriShotItem.cs" />
-    <Compile Include="Item\TwoShotItem.cs" />
-    <Compile Include="Item\ThereeShotItem.cs" />
-    <Compile Include="Item\PenetrateShotItem.cs" />
-    <Compile Include="Item\BombItem.cs" />
     <Compile Include="Barrier.cs" />
     <Compile Include="BreakObjectEffect.cs" />
     <Compile Include="CollidableObject.cs" />
@@ -90,7 +81,6 @@
     <Compile Include="Etc\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Etc\Rand.cs" />
-    <Compile Include="Etc\Singleton.cs" />
     <Compile Include="SplitBullet.cs" />
     <Compile Include="TitleScene.cs" />
     <Compile Include="Wasi_mark.cs" />
